Perkin-UAT/force-app/main/default/objects/FCO__c/FCO__c.object-meta.xml
<CustomObject>
    <label>FCO</label>
    <nameField>
        <label>FCO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>