Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FCOs</relationshipLabel>
    <relationshipName>FCOs</relationshipName>
    <type>Lookup</type>
</CustomField>