Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FCO</relationshipName>
    <type>Lookup</type>
</CustomField>