Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Business_Unit_FCO__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_FCO__c</fullName>
    <label>Business Unit FCO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>