Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Calculated_End__c.field-meta.xml
<CustomField>
    <fullName>Calculated_End__c</fullName>
    <label>Calculated End</label>
    <type>Date</type>
</CustomField>