Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Compliance_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Date__c</fullName>
    <label>Compliance Date</label>
    <type>Date</type>
</CustomField>