Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Compliance_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_End_Date__c</fullName>
    <label>Compliance End Date</label>
    <type>Date</type>
</CustomField>