Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Custom_End__c.field-meta.xml
<CustomField>
    <fullName>Custom_End__c</fullName>
    <label>Custom End</label>
    <type>Date</type>
</CustomField>