Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Custom_Start__c.field-meta.xml
<CustomField>
    <fullName>Custom_Start__c</fullName>
    <label>Custom Start</label>
    <type>Date</type>
</CustomField>