Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Days_to_Complete_FCO__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete_FCO__c</fullName>
    <label>Days to Complete FCO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>