Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Description_of_FCO_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>Description_of_FCO_for_Customer__c</fullName>
    <label>Description of FCO for Customer</label>
    <type>TextArea</type>
</CustomField>