Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Employer_Product__c.field-meta.xml
<CustomField>
    <fullName>Employer_Product__c</fullName>
    <label>Employer Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>