Perkin-UAT/force-app/main/default/objects/FCO__c/fields/English_FCO_URL__c.field-meta.xml
<CustomField>
    <fullName>English_FCO_URL__c</fullName>
    <label>English FCO URL</label>
    <type>Url</type>
</CustomField>