Perkin-UAT/force-app/main/default/objects/FCO__c/fields/FCO_ManHours__c.field-meta.xml
<CustomField>
    <fullName>FCO_ManHours__c</fullName>
    <label>FCO ManHours</label>
    <length>5</length>
    <type>Text</type>
</CustomField>