Perkin-UAT/force-app/main/default/objects/FCO__c/fields/FCO_Parts__c.field-meta.xml
<CustomField>
    <fullName>FCO_Parts__c</fullName>
    <label>FCO Parts</label>
    <length>35</length>
    <type>Text</type>
</CustomField>