Perkin-UAT/force-app/main/default/objects/FCO__c/fields/FCO_REF__c.field-meta.xml
<CustomField>
    <fullName>FCO_REF__c</fullName>
    <externalId>true</externalId>
    <label>FCO REF</label>
    <length>35</length>
    <type>Text</type>
</CustomField>