Perkin-UAT/force-app/main/default/objects/FCO__c/fields/FCO_Related_To__c.field-meta.xml
<CustomField>
    <fullName>FCO_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FCO Related To</label>
    <referenceTo>FCO__c</referenceTo>
    <relationshipLabel>FCO (FCO Related To)</relationshipLabel>
    <relationshipName>FCO1</relationshipName>
    <type>Lookup</type>
</CustomField>