Perkin-UAT/force-app/main/default/objects/FCO__c/fields/FCO_Type__c.field-meta.xml
<CustomField>
    <fullName>FCO_Type__c</fullName>
    <label>FCO Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Notification</fullName>
            </value>
            <value>
                <fullName>Interaction Center Notification</fullName>
            </value>
            <value>
                <fullName>RMA</fullName>
            </value>
            <value>
                <fullName>Work Order - Field Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>