Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Jims_Really_Imporatant_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Jims_Really_Imporatant_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Shhhhh - secret</inlineHelpText>
    <label>Jims Really Imporatant Checkbox</label>
    <type>Checkbox</type>
</CustomField>