Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Minor_End__c.field-meta.xml
<CustomField>
    <fullName>Minor_End__c</fullName>
    <label>Minor End</label>
    <type>Date</type>
</CustomField>