Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Exchange</fullName>
            </value>
            <value>
                <fullName>Call Center Activity</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Onsite Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>