Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>FCO</relationshipLabel>
    <relationshipName>FCO</relationshipName>
    <type>Lookup</type>
</CustomField>