Perkin-UAT/force-app/main/default/objects/FCO__c/fields/PSC__c.field-meta.xml
<CustomField>
    <fullName>PSC__c</fullName>
    <label>PSC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BMEI</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Crawley</fullName>
            </value>
            <value>
                <fullName>Impac</fullName>
            </value>
            <value>
                <fullName>Linkoping</fullName>
            </value>
            <value>
                <fullName>Med Int</fullName>
            </value>
            <value>
                <fullName>NeuroMag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>