Perkin-UAT/force-app/main/default/objects/FCO__c/fields/PSC_Number__c.field-meta.xml
<CustomField>
    <fullName>PSC_Number__c</fullName>
    <formula>CASE( PSC__c , 
&#39;BMEI&#39;, &#39;1&#39;, 
&#39;CMS&#39;, &#39;2&#39;,
&#39;Crawley&#39;, &#39;3&#39;,
&#39;Impac&#39;, &#39;4&#39;,
&#39;Linkoping&#39;, &#39;5&#39;,
&#39;Med Int&#39;, &#39;6&#39;, &#39;7&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSC Number</label>
    <type>Text</type>
</CustomField>