Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Return_Country__c.field-meta.xml
<CustomField>
    <fullName>Return_Country__c</fullName>
    <formula>TEXT(Return_Location__r.SVMXC__Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Country</label>
    <type>Text</type>
</CustomField>