Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Return_Location__c.field-meta.xml
<CustomField>
    <fullName>Return_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Depot Repair, location to which customer should ship product.</inlineHelpText>
    <label>Return Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>FCOs</relationshipLabel>
    <relationshipName>FCOs</relationshipName>
    <type>Lookup</type>
</CustomField>