Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Return_State__c.field-meta.xml
<CustomField>
    <fullName>Return_State__c</fullName>
    <formula>Return_Location__r.SVMXC__State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return State</label>
    <type>Text</type>
</CustomField>