Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Return_Street__c.field-meta.xml
<CustomField>
    <fullName>Return_Street__c</fullName>
    <formula>Return_Location__r.SVMXC__Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Street</label>
    <type>Text</type>
</CustomField>