Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Scan_Storage__c.field-meta.xml
<CustomField>
    <fullName>Scan_Storage__c</fullName>
    <label>Scan Storage</label>
    <length>2</length>
    <type>Text</type>
</CustomField>