Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Scope_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Scope_Review_Date__c</fullName>
    <label>Scope Review Date</label>
    <type>Date</type>
</CustomField>