Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Serial_Start__c.field-meta.xml
<CustomField>
    <fullName>Serial_Start__c</fullName>
    <label>Serial Start</label>
    <length>100</length>
    <type>Text</type>
</CustomField>