Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Sibex_FCO_id__c.field-meta.xml
<CustomField>
    <fullName>Sibex_FCO_id__c</fullName>
    <externalId>true</externalId>
    <label>Sibex FCO id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>