Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Sibex_FCOProduct_id__c.field-meta.xml
<CustomField>
    <fullName>Sibex_FCOProduct_id__c</fullName>
    <label>Sibex FCOProduct id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>