Perkin-UAT/force-app/main/default/objects/FCO__c/fields/Spanish_FCO_URL__c.field-meta.xml
<CustomField>
    <fullName>Spanish_FCO_URL__c</fullName>
    <label>Spanish FCO URL</label>
    <type>Url</type>
</CustomField>