Perkin-UAT/force-app/main/default/objects/FCO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FCO_Number__c</columns>
    <columns>NAME</columns>
    <columns>FCO_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Product__c</columns>
    <columns>Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>