Perkin-UAT/force-app/main/default/objects/FCO__c/listViews/Open_FCO_s.listView-meta.xml
<ListView>
    <fullName>Open_FCO_s</fullName>
    <columns>NAME</columns>
    <columns>FCO_Number__c</columns>
    <columns>Description__c</columns>
    <columns>FCO_Type__c</columns>
    <columns>PSC_Status__c</columns>
    <columns>Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PSC_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open FCO&#39;s</label>
    <language>en_US</language>
</ListView>